# xq-auth-client

./: .gitignore  .gitleaks.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_jwks.py  test_pep.py  test_receipts.py  test_types_and_revocation.py
xq_auth_client/: __init__.py  jwks.py  pep.py  receipts.py  revocation.py  types.py
